splitscreen: Place the divider bar above the snapped window properly.

When overview and splitview are both active, tab dragging might cause
the misplacement of the divider bar, see the bug description for
details. The reason is that in tab dragging, it's possible the window
gets activated between the drag ends and window snap, this CL makes sure
this case is also properly handled.

Bug: 908992
Change-Id: I767504153b153f3325dfce9212c647e5f390c0c9
Reviewed-on: https://chromium-review.googlesource.com/c/1352412
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611797}
Former-commit-id: 54a1b5205b2da5fe6ed4fbfb01b7b405ea456e37