ash/wm/splitview/split_view_controller.cc
@@ -618,9 +618,6 @@ void SplitViewController::OnWindowDragEnded(
     aura::Window* dragged_window,
     SnapPosition desired_snap_position,
     const gfx::Point& last_location_in_screen) {
-  if (IsSplitViewModeActive())
-    split_view_divider_->OnWindowDragEnded();
-
   if (wm::IsDraggingTabs(dragged_window)) {
     dragged_window->SetProperty(
         kTabDroppedWindowStateTypeKey,
@@ -1514,6 +1511,9 @@ void SplitViewController::EndWindowDragImpl(
     aura::Window* window,
     SnapPosition desired_snap_position,
     const gfx::Point& last_location_in_screen) {
+  if (IsSplitViewModeActive())
+    split_view_divider_->OnWindowDragEnded();
+
   // If dragged window was in overview before or it has been added to overview
   // window by dropping on the new selector item, do nothing.
   if (GetWindowSelector() && GetWindowSelector()->IsWindowInOverview(window))
